# godot-neovim

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TEST.md  build.rs  godot-neovim.gdextension
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yaml  release.yaml
addons/godot-neovim/: GodotNeovim.gd  godot-neovim.gdextension  plugin.cfg  plugin.gd
addons/godot-neovim-key-display/: key_sequence_display.gd  plugin.cfg
addons/godot-neovim/lua/godot_neovim/: init.lua
docs/: state-machine.md
src/: lib.rs  plugin.rs  settings.rs
src/lsp/: client.rs  mod.rs
src/neovim/: client.rs  commands.rs  events.rs  handler.rs  mod.rs
src/neovim/client/: buffer.rs  connection.rs  cursor.rs  execution.rs  input.rs  mod.rs  state.rs
src/plugin/: actions.rs  commands.rs  editing.rs  editor.rs  filetype.rs  keys.rs  macros.rs  marks.rs  mod.rs  motions.rs  neovim.rs  recovery.rs  registers.rs  search.rs  state.rs  ui.rs  visual.rs
src/plugin/commands/: buffer_nav.rs  file_ops.rs  help.rs  info.rs  mod.rs  mode.rs  text_ops.rs
src/plugin/input/: command.rs  dispatch.rs  insert.rs  mod.rs  normal.rs  pending.rs  replace.rs  search.rs
src/sync/: mod.rs
