[package]
name = "godot-neovim"
version = "0.9.0"
edition = "2021"
authors = ["KOGA Mitsuhiro <shiena.jp@gmail.com>"]
description = "Godot editor plugin that uses Neovim as backend"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shiena/godot-neovim"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", tag = "v0.4.5" }
nvim-rs = { version = "0.9", features = ["use_tokio"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rmpv = "1.0"
async-trait = "0.1"
lsp-types = "0.97"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []

[build-dependencies]
chrono = "0.4"

[profile.release]
strip = true
lto = true
