[package]
name = "godot-neovim"
version = "0.9.20"
edition = "2021"
authors = ["KOGA Mitsuhiro <shiena.jp@gmail.com>"]
description = "Godot editor plugin that uses Neovim as backend"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shiena/godot-neovim"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.4.5"
nvim-rs = { version = "0.9", features = ["use_tokio"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rmpv = "1.0"
async-trait = "0.1"
lsp-types = "0.97"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []

[build-dependencies]
chrono = "0.4"

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
